--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <ul class="feautures-list">
           <li>Unlimited Tasks</li>
           <li>SMS Task Reminders</li>
-          <li>COnfetti Explosions After Task Completions</li>
+          <li>Confetti Explosions After Task Completions</li>
           <li>Social Media Announcements</li>
           <li>Real Time Collaborations</li>
           <li>Other awesome features</li>
